perf(util): perfect some utils.